--- a/applications/web/public/views/pages/index.ejs
+++ b/applications/web/public/views/pages/index.ejs
@@ -9,7 +9,7 @@
 
   <div class="container">
     <div class="jumbotron">
-      <h1>Data Atual: <%= datetime %></h1>
+      <h1>Endereço IP Atual: <%= ip %></h1>
     </div>
   </div>
     
